tests/snapshots/snapshots__help_overlay_git_status.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Git Status — no data ━┓┏ Claude Code ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃                       ┃┃  Press Enter on a worktree to start a Claude Code session               ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                   ┏ Help (? to close) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                   ┃
┃                   ┃ Navigation — Git Status                                  ┃                   ┃
┃                   ┃ ─────────────────────────────────────                    ┃                   ┃
┃                   ┃ Cmd+1: Worktrees  Cmd+2: Terminal  Cmd+3: Files  Cmd+4: E┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃ j/k, ↑/↓    Navigate files                               ┃                   ┃
┃                   ┃ Enter, d    View diff                                    ┃                   ┃
┗━━━━━━━━━━━━━━━━━━━┃ 1-9, 0      Jump to worktree                             ┃                   ┃
┏ Notes ━━━━━━━━━━━━┃ Tab         Switch panel                                 ┃                   ┃
┃  select a worktree┃ Cmd+P       Fuzzy file finder                            ┃                   ┃
┃                   ┃ Cmd+F       Project search                               ┃                   ┃
┃                   ┃ q           Quit                                         ┃                   ┃
┃                   ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛                   ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] git
