tests/snapshots/snapshots__help_overlay_terminal.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━┓┏ Claude Code ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃│ ▼ my-project         ┃┃  Press Enter on a worktree to start a Claude Code session               ┃
┃    1 ▶ ○ my-project [m┃┃                                                                         ┃
┃    2 ▶ ○ my-project-fe┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                   ┏ Help (? to close) ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓                   ┃
┃                   ┃ Navigation — Terminal                                    ┃                   ┃
┃                   ┃ ─────────────────────────────────────                    ┃                   ┃
┃                   ┃ Cmd+1: Worktrees  Cmd+2: Terminal  Cmd+3: Files  Cmd+4: E┃                   ┃
┃                   ┃                                                          ┃                   ┃
┃                   ┃ i, Enter    Enter terminal mode                          ┃                   ┃
┃                   ┃ PgUp/PgDn   Scroll output                                ┃                   ┃
┃                   ┃ Cmd+\       Split: same type                             ┃                   ┃
┃                   ┃ Cmd+W       Close pane                                   ┃                   ┃
┃                   ┃             Palette: Split Terminal/Shell/Editor         ┃                   ┃
┃                   ┃ 1-9, 0      Jump to worktree                             ┃                   ┃
┃                   ┃ Tab         Cycle panes / switch panel                   ┃                   ┃
┃                   ┃ Cmd+P       Fuzzy file finder                            ┃                   ┃
┃                   ┃ Cmd+F       Project search                               ┃                   ┃
┃                   ┃ q           Quit                                         ┃                   ┃
┃                   ┃ Ctrl+C      Close session / Quit                         ┃                   ┃
┃                   ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛                   ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 NAV  terminal
