tests/snapshots/snapshots__sidebar_with_planet.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━┓┏ Claude Code ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃│ ▼ my-project         ┃┃  Press Enter on a worktree to start a Claude Code session               ┃
┃    1 ▶ ○ my-project [m┃┃                                                                         ┃
┃    2 ▶ ○ my-project-fe┃┃                                                                         ┃
┃    3 ▶ ○ my-project-fe┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┃                                                                         ┃
┏ Notes ━━━━━━━━━━━━━━━━┓┃                                                                         ┃
┃  select a worktree    ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┃                       ┃┃                                                                         ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┃                                                                         ┃
╭───────────────────────╮┃                                                                         ┃
│                       │┃                                                                         ┃
│      ▀▀▀▀▀▀▀▀▀▀       │┃                                                                         ┃
│      ▀▀▀▀▀▀▀▀▀▀       │┃                                                                         ┃
│      ▀▀▀▀▀▀▀▀▀▀       │┃                                                                         ┃
│      ▀▀▀▀▀▀▀▀▀▀       │┃                                                                         ┃
│      ▀▀▀▀▀▀▀▀▀▀       │┃                                                                         ┃
│                       │┃                                                                         ┃
╰───────────────────────╯┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] worktrees
