tests/snapshots/snapshots__split_focused_pane_highlighted.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━━━━━━┓┏ my-project ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏ my-project-feature-1 ━━━━━━━━━━━━━━━━━━━━━┓
┃  ▼ my-project              ┃┃  No session data                          ┃┃  No session data                          ┃
┃│   1 ▶ ● my-project [main] ┃┃                                           ┃┃                                           ┃
┃    2 ▶ ● my-project-feature┃┃                                           ┃┃                                           ┃
┃    3 ▶ ○ my-project-feature┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┃                            ┃┃                                           ┃┃                                           ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] terminal                                             main                                              2 running
