tests/snapshots/snapshots__split_two_panes_vertical.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Worktrees ━━━━━━━━━━━━━━━━━┓┏ my-project ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  ▼ my-project              ┃┃  No session data                                                                       ┃
┃│   1 ▶ ● my-project [main] ┃┃                                                                                        ┃
┃    2 ▶ ● my-project-feature┃┃                                                                                        ┃
┃    3 ▶ ○ my-project-feature┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┃                            ┃┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┏ my-project-feature-1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┏ Notes ━━━━━━━━━━━━━━━━━━━━━┓┃  No session data                                                                       ┃
┃  select a worktree         ┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┃                            ┃┃                                                                                        ┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] terminal                                             main                                              2 running
