tests/snapshots/snapshots__status_bar_message.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Notes ━━━━━━━━━━━━━━━━┓┏ Claude Code ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  select a worktree    ┃┃  Press Enter on a worktree to start a Claude Code session               ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 Session closed
