tests/snapshots/snapshots__status_bar_with_sessions.snap
---
source: tests/snapshots.rs
expression: output
---
 darya
┏ Notes ━━━━━━━━━━━━━━━━┓┏ my-project ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
┃  select a worktree    ┃┃  No session data                                                        ┃
┗━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 [NAV] worktrees                             main                             2 running · 1 exited
